fix product__info-wrap

--- a/src/pages/index/components/catalog-grid/_style.scss
+++ b/src/pages/index/components/catalog-grid/_style.scss
@@ -249,6 +249,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        height: 100%;
     }
 
     &__info-titles {
